Added new micro frontend react-market-list

--- a/example/packages/react-market-list/src/App.css
+++ b/example/packages/react-market-list/src/App.css
@@ -7,8 +7,8 @@
 }
 
 .App-header {
-  background-color: #eeeeee;
-  min-height: 10vh;
+  background-color: #282c34;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
