--- a/examples/store/packages/showcase/src/Showcase.css
+++ b/examples/store/packages/showcase/src/Showcase.css
@@ -1,38 +1,38 @@
-.App {
-  text-align: center;
+.Showcase {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Product {
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 5px;
+  margin: 16px;
+  padding: 16px;
   display: flex;
   flex-direction: column;
+}
+
+.Product__image {
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-bottom: 8px;
 }
 
-.App-link {
-  color: #61dafb;
+.Product__name {
+  margin-bottom: 16px;
+  flex: 1;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Product__rating {
+}
+
+.Product__price {
+  font-weight: bold;
+}
+
+.Product__actions {
+  margin-top: 16px;
+  display: flex;
+  justify-content: space-between;
 }
