--- a/packages/marketplace-frontend/src/app/home/App.css
+++ b/packages/marketplace-frontend/src/app/home/App.css
@@ -10,3 +10,62 @@
   max-height: 100%;
   overflow: auto;
 }
+
+.App__menu-collapser {
+  font-size: 18px;
+  line-height: 64px;
+  padding: 0 24px;
+  cursor: pointer;
+  transition: color 0.3s;
+}
+
+.App__menu-collapser:hover {
+  color: #1890ff;
+}
+
+.App__logo-name {
+  height: 32px;
+  margin: 16px;
+  font-size: 16px;
+  color: #fff;
+  font-weight: bold;
+  text-align: center;
+  display: flex;
+  overflow: hidden;
+}
+
+.App__logo {
+  height: 32px;
+  margin: 0 8px;
+}
+
+.App__label {
+  transition: opacity 0.3s;
+}
+
+.ant-layout-sider-collapsed .App__label {
+  opacity: 0;
+}
+
+.App__header {
+  background: #fff;
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
+  box-shadow: 0 1px 4px rgba(0, 21, 41, 0.08);
+}
+
+.App__header-avatar {
+  cursor: pointer;
+}
+.App__header-actions {
+  padding: 0 16px;
+}
+
+.ant-layout-sider {
+  box-shadow: 2px 0 6px rgba(0, 21, 41, 0.35);
+}
+
+.ant-layout-content {
+  min-height: initial;
+}
