backoffice as lib

--- a/packages/marketplace-frontend/src/app/home/App.css
+++ b/packages/marketplace-frontend/src/app/home/App.css
@@ -41,6 +41,9 @@
 
 .App__label {
   transition: opacity 0.3s;
+  display: flex;
+  align-items: center;
+  padding-left: 8px;
 }
 
 .ant-layout-sider-collapsed .App__label {
